CORE-13260: Upgrade to Gradle 8.1.1 and Kotlin 1.8.21. (#152)